--- a/src/components/Styles/card.module.css
+++ b/src/components/Styles/card.module.css
@@ -2,9 +2,9 @@
   background-color: white;
   border-radius: 5px;
   box-shadow: 0 0 5px;
-  width: 1080px;
+  /* width: 1080px; */
   min-height: 400px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding: 20px;
 }
 .card .center {
